# manga-text-cleaner

./: .gitignore  LICENSE  README.md  desktop.py  main.py  pyproject.toml  requirements.txt  run.py
fonts/: README.md
mangacleaner/: __init__.py  cli.py
mangacleaner/core/: __init__.py  ctd.py  detection.py  fonts.py  inpainting.py  io_utils.py  pipeline.py  postprocess.py  typeset.py
mangacleaner/server/: app.py  project.py
mangacleaner/server/static/: app.js  editor.js  i18n.js  index.html  style.css
scripts/: ctd_demo.py
tests/: test_api.py  test_detection.py
