[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-text-cleaner"
version = "1.0.0"
description = "Automatic text removal and inpainting for manga/manhwa pages, with a full manual touch-up studio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Manga Cleaner Studio contributors" }]
keywords = ["manga", "manhwa", "inpainting", "text-removal", "scanlation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=11.3.0",
    "tqdm>=4.65",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "fonttools>=4.40",
]

[project.optional-dependencies]
lama = ["torch>=2.0"]  # then: pip install simple-lama-inpainting --no-deps
detect = ["onnxruntime>=1.16"]
desktop = ["pywebview>=5.0"]

[project.scripts]
manga-cleaner = "mangacleaner.cli:main"

[tool.setuptools.packages.find]
include = ["mangacleaner*"]

[tool.setuptools.package-data]
"mangacleaner.server" = ["static/*"]
